ecmascript/parser/tests/typescript-errors/class/input.ts.stderr
error[1005]: Expected a semicolon
 --> $DIR/tests/typescript-errors/class/input.ts:2:5
  |
2 |   x?!: number;
  |     ^

error[1005]: Expected a property name
 --> $DIR/tests/typescript-errors/class/input.ts:2:5
  |
2 |   x?!: number;
  |     ^

